fix updates&status scrollbars

--- a/src/content/style.scss
+++ b/src/content/style.scss
@@ -69,7 +69,7 @@ fieldset {
 
 .updates, .status {
   text-align: left;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .status {
